--- a/google_chat.example.ini
+++ b/google_chat.example.ini
@@ -1,8 +1,8 @@
 [zabbix]
 host = http://<your_zabbix_address>/zabbix
-datafile = /usr/local/share/zabbix/alertscripts/eventsthreads.json
-; touch /dir/to/datafile/eventsthreads.json
-; chown zabbix /dir/to/datafile/eventsthreads.json
+datafile = /usr/share/zabbix/alertscripts/zabbix-google-chat/eventsthreads.json
+; touch eventsthreads.json
+; chown zabbix eventsthreads.json
 
 [chat]
 FirstRoom = webhook_url_generated_in_hangouts_chat_room
