--- a/google_chat.example.ini
+++ b/google_chat.example.ini
@@ -4,7 +4,7 @@ datafile = /usr/share/zabbix/alertscripts/zabbix-google-chat/eventsthreads.json
 ; touch eventsthreads.json
 ; chown zabbix eventsthreads.json
 
+; Webhook Names and URLs
 [chat]
-FirstRoom = webhook_url_generated_in_hangouts_chat_room
-SecondRoom = webhook_url_generated_in_hangouts_chat_room
-
+FirstRoomName = webhook_url_generated_in_hangouts_chat_room
+; SecondRoomName = webhook_url_generated_in_hangouts_chat_room
